--- a/app/src/Components/loading/style.css
+++ b/app/src/Components/loading/style.css
@@ -8,10 +8,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999; /* Ajuste conforme necessário */
+    z-index: 9999; 
 }
   
 .loading-content {
-    text-align: center;
     color: #ffffff;
 }  
